--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +11,13 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
-    "eslint-config-airbnb": "^19.0.4",
+    "firebase": "^9.7.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
@@ -26,6 +29,12 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/ --ext .ts,.js,.tsx,.jsx",
     "lint:fix": "yarn run lint --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "husky": {
     "hooks": {
@@ -51,8 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.7",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
