--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -13,7 +16,9 @@
     "@types/react-dom": "^18.0.3",
     "@types/uuid": "^8.3.4",
     "classnames": "^2.3.1",
+    "emotion": "^11.0.0",
     "firebase": "^9.7.0",
+    "framer-motion": "^6.3.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "react": "^18.1.0",
@@ -22,6 +27,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.1.4",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
